force-app/main/default/objects/GameQuestStepRoundTurn__c/GameQuestStepRoundTurn__c.object-meta.xml
<CustomObject>
    <label>Game Quest Step Round Turn</label>
    <nameField>
        <displayFormat>GQSRT-{000000}</displayFormat>
        <label>Game Quest Step Round Turn Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Game Quest Step Round Turns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>