force-app/main/default/objects/GameQuestStepRoundTurn__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fight</fullName>
            </value>
            <value>
                <fullName>Magic</fullName>
            </value>
            <value>
                <fullName>Item</fullName>
            </value>
            <value>
                <fullName>Run</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>