force-app/main/default/objects/GameQuestStepRoundTurn__c/fields/Actor__c.field-meta.xml
<CustomField>
    <fullName>Actor__c</fullName>
    <label>Actor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Character</fullName>
            </value>
            <value>
                <fullName>Monster</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>