force-app/main/default/objects/GameQuestStepRoundTurn__c/fields/GameQuestStepMonster__c.field-meta.xml
<CustomField>
    <fullName>GameQuestStepMonster__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Game Quest Step Monster</label>
    <referenceTo>GameQuestStepMonster__c</referenceTo>
    <relationshipLabel>Game Quest Step Round Turns</relationshipLabel>
    <relationshipName>GameQuestStepRoundTurns</relationshipName>
    <type>Lookup</type>
</CustomField>