force-app/main/default/objects/GameQuestStepRoundTurn__c/fields/GameQuestStepRound__c.field-meta.xml
<CustomField>
    <fullName>GameQuestStepRound__c</fullName>
    <label>Game Quest Step Round</label>
    <referenceTo>GameQuestStepRound__c</referenceTo>
    <relationshipLabel>Game Quest Step Round Turns</relationshipLabel>
    <relationshipName>GameQuestStepRoundTurns</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>